# majang_calcu

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/majang_calcu/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: camera_controller.dart  picture_display.dart
lib/opencv/: version_page.dart
lib/pages/: home.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_cv/: README.md  pubspec.yaml
native_cv/android/: CMakeLists.txt  build.gradle
native_cv/android/ncnn/include/ncnn/: layer_type_enum.h  ncnn_export.h  platform.h
native_cv/android/ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
native_cv/android/ncnn/lib/pkgconfig/: ncnn.pc
native_cv/android/src/main/: AndroidManifest.xml
native_cv/android/src/main/kotlin/com/korisama/native_cv/: NativeCvPlugin.kt
native_cv/android/src/test/kotlin/com/korisama/native_cv/: NativeCvPluginTest.kt
native_cv/ios/: native_cv.podspec
native_cv/ios/Classes/: NativeCvPlugin.swift
native_cv/lib/: native_cv.dart  native_cv_method_channel.dart  native_cv_platform_interface.dart
native_cv/models/: best.param
native_cv/src/: native.cpp  yolo.cpp  yolo.h  yolo_det.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
